gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail21243.d
version https://git-lfs.github.com/spec/v1
oid sha256:b29a59745d74cf8ddeb92c6221d3a8a5a8f037b0cef898e0019e0f8ec23c4d8a
size 921
